--- a/docs/面试准备系列/面经2.md
+++ b/docs/面试准备系列/面经2.md
@@ -84,4 +84,13 @@
 
   默认开启的就是一级缓存，是基于一个HashMap 实现的，作用域为session，当session 刷新或者关闭之后，cache 就会失效
 
-  二级缓存作用域为mapper,可以被多个sqlSession 共享，使用场景是对sql实时要求性不高，并且查询量大的数据
+  二级缓存作用域为mapper,可以被多个sqlSession 共享，使用场景是对sql实时要求性不高，并且查询量大的数据 
+  
+- 事务的特性
+
+  - 原子性
+  
+  - 一致性
+  
+  - 隔离性
+  - 持久性
